# rust-mail-server

./: .gitignore  Cargo.toml
src/: auth.rs  command.rs  config.rs  constants.rs  email.rs  http_server.rs  mail_io.rs  main.rs  smtp_server.rs
src/http/: http_html_service.rs  http_server.rs  mod.rs
src/util/: base64.rs
static/: index.html
test/: file.txt  mail_test.py
